Added social share metadata

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://theme-switcher.eduardochaves.me/">
+  <meta property="og:image" content="https://i.imgur.com/TvUKNxy.png">
+  <meta property="og:title" content="Theme Switcher 🌘 - Eduardo Chaves">
+  <meta property="og:description" content="Botão 'toggle' que alterna entre tema Claro e Escuro da página ">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&family=Raleway:wght@100;300;600&display=swap" rel="stylesheet"> 
@@ -12,7 +19,11 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="github-button.css">
   <script defer src="script.js"></script>
+
   <title>Theme Switcher 🌘 - Eduardo Chaves</title>
+  <meta name="description" content="Botão 'toggle' que alterna entre tema Claro e Escuro da página ">
+  <meta name="author" content="Eduardo Chaves">
+  <meta >
 </head>
 <body class="theme-switcher open-transition">
   <!-- My GitHub Button (fixed on bottom-right with css) -->
