--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&family=Raleway:wght@100;300;600&display=swap" rel="stylesheet"> 
 
   <link rel="shortcut icon" href="/assets/eduardochaves-favicon.svg" type="image/x-icon">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="github-button.css">
-  <script defer src="script.js"></script>
+  <link rel="stylesheet" href="style.min.css">
+  <link rel="stylesheet" href="github-button.min.css">
+  <script defer src="script.min.js"></script>
 
   <title>Theme Switcher 🌘 - Eduardo Chaves</title>
   <meta name="description" content="Botão 'toggle' que alterna entre tema Claro e Escuro da página ">
