changed the social share image url

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://theme-switcher.eduardochaves.me/">
-  <meta property="og:image" content="https://i.imgur.com/TvUKNxy.png">
+  <meta property="og:image" content="https://github.com/eduardochaves1/public-imgs/blob/main/social-share-for-pages/theme-switcher.jpg?raw=true">
   <meta property="og:title" content="Theme Switcher 🌘 - Eduardo Chaves">
   <meta property="og:description" content="Botão 'toggle' que alterna entre tema Claro e Escuro da página ">
 
